--- a/DevIntensive/app/src/main/res/values/dimens.xml
+++ b/DevIntensive/app/src/main/res/values/dimens.xml
@@ -2,4 +2,23 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!--Sites-->
+    <dimen name="size_small_24">24dp</dimen>
+    <dimen name="size_medium_56">56dp</dimen>
+    <dimen name="size_large_72">72dp</dimen>
+
+    <!--Spaces-->
+    <dimen name="spacing_small_8">8dp</dimen>
+    <dimen name="spacing_normal_16">16dp</dimen>
+    <dimen name="spacing_medial_24">24dp</dimen>
+    <dimen name="spacing_medium_32">32dp</dimen>
+    <dimen name="spacing_large_56">56dp</dimen>
+    <dimen name="spacing_larger_72">72dp</dimen>
+
+    <!--Sites of views-->
+    <dimen name="button_height_tall_60">60dp</dimen>
+    <dimen name="button_height_normall_40">40dp</dimen>
+    <dimen name="button_height_short_32">32dp</dimen>
+
 </resources>
